@@ -1,3 +1,12 @@
+2003-04-02  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-gstreamer.h:
+	* src/sj-gstreamer.c:
+	Add a cancel callback, and poke at changing the encoding
+	format. This will be rewritten.
+
+	* README: Updated again.
+
 2003-04-01  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-gstreamer.c: Take into account the track starting
